charts/templates/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres   # must match postgres Deployment label
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
