charts/templates/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30080
  selector:
    app: python-app
